fixed rollover state on scrollbar scrubber

--- a/app/scss/globalCSS/_mixIn.scss
+++ b/app/scss/globalCSS/_mixIn.scss
@@ -158,7 +158,7 @@
     {
         border-radius: 0;
         background: $thumb-color;
-        box-shadow: rgba(255, 255, 255, 0.1) 0px 0px 0px 0px, rgba(0, 0, 0, 0.7) 0px -1px 7px 0px inset;
+        box-shadow: rgba(255, 255, 255, 0.1) 0px 0px 0px 0px, rgba(0, 0, 0, .7) 0px 0px 7px 0px inset;
     }
 }
 
